fixed visibility issue of mapvote count

--- a/css/main_custom.scss
+++ b/css/main_custom.scss
@@ -4150,7 +4150,6 @@ $blurBg: #ffffff1f;
     padding-top: 13px;
     padding-left: 10px;
     text-align: start;
-    background: #00000057;
   }
 
   .matchVoteMode {
@@ -4200,12 +4199,24 @@ $blurBg: #ffffff1f;
       position: absolute;
       background: transparent;
       backdrop-filter: blur(0px);
-      z-index: -1;
+      z-index: -2;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
       transition: backdrop-filter 300ms;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: #00000057;
+      z-index: -1;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
     }
   }
 
